initial commit for phase 2.4
